[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="GameMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuGrid" type="GridContainer" parent="CenterContainer"]
margin_left = 331.0
margin_top = 134.0
margin_right = 693.0
margin_bottom = 465.0
custom_constants/vseparation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CenterContainer/MenuGrid"]
margin_right = 362.0
margin_bottom = 57.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CenterContainer/MenuGrid"]
margin_top = 137.0
margin_right = 362.0
margin_bottom = 194.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CenterContainer/MenuGrid"]
margin_top = 274.0
margin_right = 362.0
margin_bottom = 331.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CenterContainer/MenuGrid/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="CenterContainer/MenuGrid/Options" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="CenterContainer/MenuGrid/Quit" to="." method="_on_Quit_button_up"]
